# sitesense-reader

./: .eslintrc.cjs  .gitignore  README.md  README_ar.md  README_es.md  README_fr.md  README_ru.md  README_zh.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: a_stocks.tsv
src-tauri/src/: ai.rs  app_menu.rs  app_runtime.rs  commands.rs  eastmoney.rs  lib.rs  main.rs  market_data.rs  media_protocol.rs  pdf_downloader.rs  stock_tagger.rs  window_lifecycle.rs  wordpress.rs
src-tauri/src/db/: articles.rs  cache.rs  feeds.rs  groups.rs  mod.rs  opml.rs  rules.rs  rules_engine.rs  tags.rs
src-tauri/src/feed/: mod.rs  tests.rs
src-tauri/src/models/: mod.rs
src/components/: AIProfileManager.tsx  AppRuntimeBridge.tsx  ArticleItem.tsx  ArticleList.tsx  ArticleView.tsx  CodeBlock.tsx  EastmoneyReportsPanel.tsx  FeedUpdater.tsx  GlobalContextMenu.tsx  Layout.tsx  LazyHtmlContent.tsx  MarketDataSync.tsx  PdfViewer.tsx  Sidebar.tsx  VideoEmbed.tsx
src/components/add-feed/: AddFeedForm.tsx
src/components/article-list/: ArticleListContent.tsx  ArticleListHeader.tsx
src/components/settings/: AboutSettings.tsx  GeneralSettings.tsx  ShortcutSettings.tsx
src/hooks/: useArticleList.ts  useArticleListShortcuts.ts  useArticleUpdateListener.ts  useKeyboardShortcuts.ts
src/pages/: SearchResults.tsx
src/services/: ai.ts  runtime.ts
src/stores/: feedStore.ts  settingsStore.ts
src/test/: App.navigation.test.tsx
src/types/: index.ts
src/utils/: articleContent.ts  mediaProxy.ts
(+19 files in other folders)
