[package]
name = "rss-reader"
version = "0.2.0"
description = "A local, registration-free RSS reader"
authors = ["you"]
edition = "2021"
default-run = "rss-reader"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
feed-rs = "1.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
sha2 = "0.10"
url = "2.5"
mime_guess = "2.0"
hex = "0.4"
urlencoding = "2.1"
regex = "1.10"
uuid = { version = "1.21.0", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
